--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-body {
+.App {
   background-color: #f1abab;
   font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: auto;
 }
 
 .container {
@@ -13,14 +13,14 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #b88e8e;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  padding: 50px;
+  padding: 320px;
 }
 
 h1 {
   font-size: 36px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .color-box {
@@ -28,7 +28,7 @@ h1 {
   height: 200px;
   border-radius: 10px;
   margin-bottom: 20px;
-  animation: 3s linear 1s infinite running slidein;
+  animation: 3s linear 1s infinite alternate slidein;
 }
 
 .color-code {
@@ -41,7 +41,7 @@ button {
   padding: 10px 20px;
   background-color: #d729b7;
   color: #0eaa86;
-  border: 4mm ridge rgba(211, 220, 50, .6);;
+  border: 4mm ridge rgba(211, 220, 50, 0.6);
   border-radius: 5px;
   font-size: 18px;
   cursor: pointer;
@@ -50,10 +50,6 @@ button {
 
 button:hover {
   background-color: #df772e;
-}
-.color-box {
-  /* other styles */
-  animation: 3s linear 1s infinite alternate slidein;;
 }
 
 @keyframes slidein {
