--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,67 @@
+.App
 body {
-  background-color: #f6f6f6;
+  background-color: #f1abab;
+  font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-#random-pattern {
+.container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 100vh;
-  background: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);
+  align-items: center;
+  background-color: #b88e8e;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  padding: 50px;
 }
 
-#random-pattern button {
-  padding: 10px 30px;
-  border: none;
-  font-size: 16px;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  cursor: pointer;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
+h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
-#random-pattern button:hover {
-  transform: translateY(-5px);
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
-}
-
-#code {
-  background-color: #fff;
-  color: #222;
-  font-family: "Courier New", Courier, monospace;
-  padding: 20px;
+.color-box {
+  width: 200px;
+  height: 200px;
   border-radius: 10px;
-  margin: 20px 50px;
-  text-align: center;
+  margin-bottom: 20px;
+  animation: 3s linear 1s infinite alternate slidein;
+}
+
+.color-code {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #d729b7;
+  color: #0eaa86;
+  border: 4mm ridge rgba(211, 220, 50, .6);;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #df772e;
+}
+
+.color-square {
+animation: 3s linear 1s infinite alternate slidein;
+}
+
+@keyframes slidein {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
